# jsonapi-deserialize-rs

jsonapi_deserialize/: Cargo.toml
jsonapi_deserialize/src/: deserialize.rs  document.rs  included.rs  lib.rs
jsonapi_deserialize_derive/src/: lib.rs
test_suite/: Cargo.toml
test_suite/tests/: error.rs  optional-field.rs  reference-relationships.rs  rename.rs  resource-relationships.rs
